# worker-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit.md
src/worker_bridge/: __init__.py  cli.py  discovery.py  environ.py  mcp_server.py  models.py  orchestrator.py  prompt.py  redaction.py  registry.py  runner.py  store.py  workflows.py  workspace.py
src/worker_bridge/adapters/: __init__.py  base.py  clients.py  codex.py  generic_cli.py  mock.py  vscode.py  zcode.py
tests/: conftest.py  test_dispatch_hardening.py  test_hardening.py  test_repository_lock.py  test_worker_bridge.py  test_workflow_types.py  test_zcode_adapter.py
vscode-extension/: README.md  build.sh  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
