[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker-bridge-mcp"
version = "0.1.0"
description = "Delegate coding tasks to external AI coding agents (Codex, Claude Code, OpenCode, any CLI) in isolated git worktrees, then independently verify the result — exposed as an MCP server any agent can use."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "worker-bridge contributors" }]
keywords = ["mcp", "ai-agents", "coding-agent", "orchestration", "codex", "claude-code", "opencode", "delegation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "psutil>=5.9",
  "mcp>=1.2",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7.4", "ruff>=0.4", "PyYAML>=6.0"]

[project.scripts]
worker-bridge = "worker_bridge.cli:main"
worker-bridge-mcp = "worker_bridge.mcp_server:main"

[project.urls]
Homepage = "https://github.com/trollbot2012/worker-bridge"
Issues = "https://github.com/trollbot2012/worker-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_bridge"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
